--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,12 +1,4 @@
 @import sanitize-css
-@import styles/font
 
-html, body
-  margin: 0
-  padding: 0
-  font-family: $ff-gothic
-
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
+body
+  font-family: sans-serif
